# translate

./: .gitignore  LICENSE  README.md
translens/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
translens/scripts/: gen-locales.mjs
translens/src/: App.tsx  types.ts
translens/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
translens/src-tauri/capabilities/: default.json
translens/src-tauri/icons/: icon.icns
translens/src-tauri/src/: lib.rs  main.rs
translens/src-tauri/src/commands/: clipboard.rs  mod.rs  screen.rs  state.rs  translation.rs  window.rs
translens/src/components/: HistoryPanel.tsx  ScreenshotOverlay.tsx  Sidebar.tsx
translens/src/components/ChatBubble/: ChatBubble.tsx
translens/src/components/SelectionBox/: SelectionBox.tsx
translens/src/components/Settings/: ChatBubbleSettings.tsx  ColorField.tsx  InputField.tsx  SelectField.tsx  SettingSection.tsx  SettingsPanel.tsx  ShortcutField.tsx  SliderField.tsx  ToggleField.tsx
translens/src/components/TranslationOverlay/: TranslationOverlay.tsx
translens/src/components/TranslationPop/: TranslationPop.tsx
translens/src/hooks/: useGlobalShortcuts.ts  useI18n.ts  useSelection.ts  useSettings.ts  useTranslation.ts
translens/src/i18n/: auto-locales.ts  index.ts
translens/src/i18n/locales/: ar.ts  de.ts  en.ts  es.ts  fr.ts  it.ts  ja.ts  ko.ts  pt.ts  ru.ts  tr.ts  zh-CN.ts
translens/src/stores/: appStore.ts
translens/src/styles/: globals.css
translens/src/utils/: chatBubbleThemes.ts  overlayWindow.ts  smartPosition.ts
(+6 files in other folders)
