[package]
name = "translens"
version = "1.0.1"
description = "TransLens - 智能划词翻译助手"
authors = ["TransLens Team"]
edition = "2021"

[lib]
name = "translens_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
xcap = "0.5"
image = "0.25"
md5 = { package = "md-5", version = "0.10" }
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
windows-future = "0.2.1"
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
] }
